--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,8 +1,27 @@
 $color-sassy: #cc4397;
 $color-blue: #0059ff;
 
+@font-face {
+  font-family: 'Montserrat';
+  font-weight: 400;
+  src: local('Montserrat'), url(../fonts/Montserrat-Regular.ttf) format('truetype');
+}
+
+@font-face {
+    font-family: 'Montserrat';
+    font-weight: 100;
+    src: local('Montserrat'), url(../fonts/Montserrat-Thin.ttf) format('truetype');
+}
+
+@font-face {
+    font-family: 'Montserrat';
+    font-weight: 800;
+    src: local('Montserrat'), url(../fonts/Montserrat-ExtraBold.ttf) format('truetype');
+}
+
 .App{
   background-color: $color-blue;
+  font-family: Montserrat, Arial, serif;
   font-size: 2rem;
   height: 95vh;
   width: 100%;
