--- a/src/assets/scss/fonts/fonts.scss
+++ b/src/assets/scss/fonts/fonts.scss
@@ -1,17 +1,37 @@
 @font-face {
+    font-family: 'Montserrat';
+    font-weight: 200;
+    src: url(../../fonts/Montserrat-ExtraLight.ttf) format('truetype');
+}
+
+@font-face {
+  font-family: 'Montserrat';
+  font-weight: 300;
+  src: url(../../fonts/Montserrat-Light.ttf) format('truetype');
+}
+
+@font-face {
+  font-family: 'Montserrat';
+  font-weight: 300;
+  src: url(../../fonts/Montserrat-LightItalic.ttf) format('truetype');
+}
+
+@font-face {
   font-family: 'Montserrat';
   font-weight: 400;
-  src: local('Montserrat'), url(../fonts/Montserrat-Regular.ttf) format('truetype');
+  src: url(../../fonts/Montserrat-Regular.ttf) format('truetype');
 }
 
 @font-face {
-    font-family: 'Montserrat';
-    font-weight: 100;
-    src: local('Montserrat'), url(../fonts/Montserrat-Thin.ttf) format('truetype');
+  font-family: 'Montserrat';
+  font-weight: 600;
+  src: url(../../fonts/Montserrat-SemiBold.ttf) format('truetype');
 }
+
 
 @font-face {
     font-family: 'Montserrat';
-    font-weight: 800;
-    src: local('Montserrat'), url(../fonts/Montserrat-ExtraBold.ttf) format('truetype');
+    font-weight: 700;
+    src: url(../../fonts/Montserrat-Bold.ttf) format('truetype');
 } 
+
