--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -35,6 +35,7 @@
 
     &--form{
         position: absolute;
+        display: flow-root;
         top: 40%;
         left: 50%;
         -webkit-transform: translate(-50%, -50%);
@@ -43,7 +44,16 @@
         &-page1{
             display: flex;
             flex-direction: column;
-            justify-content: center;
+            justify-content: space-evenly;
+            align-items: center;
+            min-height: 30rem;
+        }
+
+        &-page2{
+            text-align: center;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-evenly;
             align-items: center;
             min-height: 30rem;
         }
