defined initial layout for all 5 form pages

--- a/src/assets/scss/custom/_buttons.scss
+++ b/src/assets/scss/custom/_buttons.scss
@@ -17,6 +17,17 @@
       transform: translateY(-2px);
       box-shadow: -0.1em 0 .7em black;
     }
+
+    &:disabled{
+      border: 1px solid #999999;
+      background-color: #cccccc;
+      color: #666666;
+
+      &:hover{
+        transform: translateY(0);
+        box-shadow: unset;
+      }
+    }
 }
 
 .btn-sm{
