--- a/src/assets/scss/custom/_forms.scss
+++ b/src/assets/scss/custom/_forms.scss
@@ -2,12 +2,14 @@
     font-size: 4rem;
     text-transform: uppercase;
     letter-spacing: .5rem;
+    font-weight: 400;
 }
 
 .form-label-header-sm {
     font-size: 3rem;
     text-transform: uppercase;
     letter-spacing: .2rem;
+    font-weight: 400;
 }
 
 .form-input-container {
@@ -17,7 +19,6 @@
     background-color: rgba(57, 63, 84, 0.5);
     border-radius: 2px;
     display: flex;
-    //@at-root: 3rem;
 
     &:after {
         content: '';
@@ -33,13 +34,6 @@
         background: linear-gradient(to right, #B294FF, #57E6E6, #FEFFB8, #57E6E6, #B294FF, #57E6E6);
         background-size: 500% auto;
         animation: gradient 3s linear infinite;
-    }
-
-    span {
-        font-size: 2rem;
-        position: absolute;
-        bottom: 0;
-        right: -35px;
     }
 }
 
@@ -66,6 +60,20 @@
     }
 }
 
+.end-label-eu {
+    font-size: 2.5rem;
+    position: absolute;
+    bottom: 3px;
+    right: -40px;
+}
+
+.end-label-cm {
+    font-size: 2rem;
+    position: absolute;
+    bottom: 0;
+    right: -35px;
+}
+
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
@@ -78,34 +86,49 @@ input[type=number] {
     -moz-appearance: textfield;
 }
 
-///////  RADIO BUTTONS  ///////
-.radio-group-container {
+
+//************************ RADIO BUTTONS  *********************************//
+.radio-container-page2 {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    padding: 1rem 3rem;
+    padding: 2rem 3rem;
     width: 100%;
     align-items: flex-start;
 }
 
+.radio-container-page5 {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    padding: 2rem 3rem;
+    width: 100%;
+}
+
+.radio-container-page3 {
+    display: flex;
+    flex-direction: row;
+    width: 60%;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
 .radio-label {
+    background-color: rgba(57, 63, 84, 0.5);
     font-size: 2rem;
     letter-spacing: .3rem;
     display: flex;
     align-items: center;
-    border-radius: 100px;
-    padding: 8px 12px;
-    margin: 5px 0;
-    background-color: transparent;
-    background: #7881A1;
-    
+    border-radius: 10rem;
+    padding: .8rem 1.2rem;
+    margin: .5rem .5rem;
     cursor: pointer;
     transition: .3s;
 }
 
 .radio-label:hover,
-.radio-label:focus-within {
-    background: hsla(0, 0%, 80%, .14);
+.radio-label:checked {
+    background: linear-gradient(to right, #B294FF, #57E6E6, #FEFFB8, #57E6E6, #B294FF, #57E6E6);
+    background-size: 500% auto;
 }
 
 .radio-input {
@@ -119,22 +142,56 @@ input[type=number] {
 }
 
 .radio-design {
-    width: 22px;
-    height: 22px;
-    border-radius: 100px;
-  
+    width: 1.8rem;
+    height: 1.8rem;
+    border-radius: 10rem;
     background: linear-gradient(to right bottom, hsl(154, 97%, 62%), hsl(225, 97%, 62%));
     position: relative;
-  }
-  
-  .rad-design::before {
-    content: '';  
-    display: inline-block;
-    width: inherit;
-    height: inherit;
-    border-radius: inherit;
-  
-    background: hsl(0, 0%, 90%);
-    transform: scale(1.1);
+
+    &::before {
+        content: '';
+        display: inline-block;
+        width: inherit;
+        height: inherit;
+        border-radius: inherit;
+        background: linear-gradient(to right, #B294FF, #57E6E6, #FEFFB8, #57E6E6, #B294FF, #57E6E6);
+        background-size: 500% auto;
+        transform: scale(1.1);
+        transition: .3s;
+        position: absolute;
+        left: 0;
+    }
+}
+
+.radio-text {
+    margin-left: .7rem;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    font-size: 18px;
     transition: .3s;
-  }
+    font-weight: 300;
+}
+
+.is-selected {
+    background: linear-gradient(to right, #B294FF, #57E6E6, #FEFFB8, #57E6E6, #B294FF, #57E6E6);
+    background-size: 500% auto;
+}
+
+// ************************** ERRORS **********************//
+%form-error {
+    position: absolute;
+    background-color: red;
+    font-size: 1.5rem;
+    border-radius: 5rem;
+    padding: .2rem .9rem;
+}
+
+.form-error-bottom {
+    @extend %form-error;
+    bottom: 0
+}
+
+.form-error-center {
+    @extend %form-error;
+    bottom: 3.5rem;
+}
