--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -9,7 +9,10 @@
 
 @import "./base/base";
 
+@import "./layout/body-background";
 @import "./layout/header";
+@import "./layout/featured-bikes";
+@import "./layout/bike-selection-form";
 
 
 
