--- a/src/assets/scss/utils/_helpers.scss
+++ b/src/assets/scss/utils/_helpers.scss
@@ -2,6 +2,14 @@
     margin-top: 2rem;
 }
 
+.pt-24{
+    padding-top: 24rem;
+}
+
 .floated-right{
     float: right;
+}
+
+.black{
+    color: black;
 }
