--- a/src/assets/scss/utils/_typography.scss
+++ b/src/assets/scss/utils/_typography.scss
@@ -5,10 +5,22 @@
     letter-spacing: .9rem;
 }
 
+.heading-secondary{
+    font-size: $h2;
+    font-weight: $font-regular;
+    text-transform: uppercase;
+    letter-spacing: .7rem;
+}
+
 .heading-tertiary{
     font-size: $h4;
     font-weight: $font-regular;
     text-transform: uppercase;
     text-align: center;
     letter-spacing: .3rem;
+}
+
+.heading-h4{
+    font-size: $h5;
+    text-transform: uppercase;
 }
