--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -1,11 +1,11 @@
 .header {
-    margin: 3rem;
-    height: 90vh;
+    height: 94vh;
     background: url('../../img/header-background.jpg');
     background-size: cover;
     background-position-y: center;
     position: relative;
-    clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 75%, 0 100%);
+    z-index: 10;
 
     &--logo{
         position: absolute;
@@ -31,43 +31,5 @@
         -webkit-transform: translate(-50%, -50%);
         transform: translate(-50%, -50%);
         white-space: nowrap;
-    }
-
-    &--form{
-        position: absolute;
-        display: flow-root;
-        top: 40%;
-        left: 50%;
-        -webkit-transform: translate(-50%, -50%);
-        transform: translate(-50%, -50%);
-        width: 80rem;
-
-        &-page1{
-            position: relative;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-evenly;
-            align-items: center;
-            min-height: 30rem;
-            text-align: center;
-        }
-
-/*         &-page2{
-            text-align: center;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-evenly;
-            align-items: center;
-            min-height: 30rem;
-        }
-
-        &-page3{
-            text-align: center;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-evenly;
-            align-items: center;
-            min-height: 30rem;
-        } */
     }
 }
