included more styling / added mixins

--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -3,6 +3,7 @@
 
 
 @import "./utils/app_variables";
+@import "./utils/mixins";
 @import "./utils/typography";
 @import "./utils/helpers";
 @import "./fonts/fonts.scss";
