--- a/src/assets/scss/layout/_bike-selection-form.scss
+++ b/src/assets/scss/layout/_bike-selection-form.scss
@@ -1,10 +1,14 @@
 .form-section{
-    height: 99vh;
+    height: 80vh;
     position: relative;
     background: url('../../img/header-background.jpg');
     background-size: cover;
     background-position-y: center;
     transform: skewY(-5deg);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: -8rem;
 
     & > * {
         transform: skewY(5deg);
@@ -13,21 +17,23 @@
     
     &--form{
         position: absolute;
-        display: flow-root;
-        top: 40%;
-        left: 50%;
-        -webkit-transform: translate(-50%, -50%);
-        transform: translate(-50%, -50%);
+        //display: flex;
+        //align-items: center;
+        ///justify-content: center;
+        //top: 20%;
+        //left: 5%;
+       /*  -webkit-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%); */
         width: 80rem;
+    }
 
-        &-page-container{
-            position: relative;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-evenly;
-            align-items: center;
-            min-height: 30rem;
-            text-align: center;
-        }
+    &--page-container{
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        min-height: 30rem;
+        text-align: center;
     }
 }
