--- a/src/assets/scss/utils/_app_variables.scss
+++ b/src/assets/scss/utils/_app_variables.scss
@@ -5,6 +5,7 @@ $color-pink-red: #d66761;
 $color-dark-gray: #001b2e;
 $color-light-gray: #303639;
 
+
 $color-black: #000;
 $color-gray-coal: #222;
 $color-gray-lead: #666;
@@ -12,6 +13,7 @@ $gray-cement: #999;
 $gray-titanium: #AAA;
 $gray-cloud: #DADEE8;
 $gray-mist: #F1F1F1;
+$color-alice-blue: aliceblue;
 
 //FONT SIZES
 $font-xs: 1.2rem;
