--- a/src/assets/scss/utils/_helpers.scss
+++ b/src/assets/scss/utils/_helpers.scss
@@ -2,12 +2,15 @@
     margin-top: 2rem;
 }
 
-.pt-24{
-    padding-top: 24rem;
+.pt-20{
+    padding-top: 20rem;
 }
 
 .floated-right{
     float: right;
+    position: absolute;
+    bottom: 0;
+    right: 0;
 }
 
 .black{
