--- a/src/assets/scss/layout/_featured-bikes.scss
+++ b/src/assets/scss/layout/_featured-bikes.scss
@@ -34,7 +34,7 @@
         flex-direction: column;
     }
 
-    &--slide1 {
+    &--slide {
         flex-shrink: 0;
         scroll-snap-align: start;
         display: flex;
@@ -45,7 +45,9 @@
         padding: 1rem;
         background-color: white;
         box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+        transition: all .8s;
     }
+
 
     &--img {
         height: 200px;
