--- a/src/assets/scss/utils/_typography.scss
+++ b/src/assets/scss/utils/_typography.scss
@@ -3,6 +3,7 @@
     font-weight: $font-regular;
     text-transform: uppercase;
     letter-spacing: .9rem;
+    text-shadow: 1px 1px 2px black;
 }
 
 .heading-secondary{
@@ -10,6 +11,7 @@
     font-weight: $font-regular;
     text-transform: uppercase;
     letter-spacing: .7rem;
+    text-shadow: 1px 1px 2px black;
 }
 
 .heading-tertiary{
@@ -18,6 +20,7 @@
     text-transform: uppercase;
     text-align: center;
     letter-spacing: .3rem;
+    text-shadow: 1px 1px 2px black;
 }
 
 .heading-h4{
